# yoga-forum

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fly.test.toml  fly.toml  justfile  shell.nix
public/: api_docs.html  guide.html  index.html  openapi.json  swagger.html  yoga_api_v1.txt
scripts/: curl.sh  find_user.sh  load_test.sh  login.sh  new_comment.sh  new_story.sh  new_user.sh  setup.sh
templates/: api_docs.html  base.html  context.toml  guide.html  index.html  yoga_api_v1.txt
templatize-me/: README.md
templatize-me/src/: main.rs
yoga-actor/: Cargo.toml  README.md
yoga-actor/src/: actor.rs  main.rs  network.rs
yoga-forum/: Cargo.toml  README.md  build.rs
yoga-forum/src/: api.rs  auth.rs  constants.rs  entities.rs  error.rs  lib.rs  main.rs  rate_limiting.rs  server.rs  storage.rs  tracing.rs
yoga-forum/src/api/: find_user.rs  get_comment.rs  get_story.rs  list_comments.rs  list_stories.rs  new_comment.rs  new_story.rs
yoga-forum/src/auth/: api.rs  extractor.rs  jwt.rs  password.rs
yoga-forum/src/auth/api/: login.rs  new_user.rs
yoga-forum/src/storage/: sqlite.rs
yoga-forum/src/storage/migrations-sqlite/: 20220122_init.sql
yoga-forum/tests/: auth_tests.rs  common.rs  list_stories_tests.rs  misc.rs  new_comment_tests.rs  new_story_tests.rs  new_user_tests.rs
