[package]
name = "yoga-actor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.1.8", features = ["derive"] }
env_logger = "0.9.0"
yoga-forum = { path = "../yoga-forum" }
futures = "0.3.21"
log = "0.4"
rand = "0.8.5"
rand_core = { version = "0.6", features = ["std"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.17", features = ["rt", "macros", "rt-multi-thread"] }
