[package]
name = "yoga-forum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.1"
actix-web = "4"
anyhow = "1.0"
argon2 = { version = "0.3.2" }
async-trait = "0.1.52"
base64 = "0.13.0"
chrono = "0.4.19"
env_logger = "0.9.0"
futures-util = "0.3.21"
governor = "0.4.2"
jsonwebtoken = "8.1.1"
lazy_static = "1.4.0"
log = "0.4"
password-hash = { version = "0.3.2", features = ["alloc"] }
rand = "0.8.5"
rand_core = { version = "0.6", features = ["std"] }
ring = "0.16.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = ["runtime-actix-rustls", "migrate"] }
thiserror = "1.0"
tokio = { version = "1.17", features = ["rt", "macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.5"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
url = { version = "2.2.2", features = ["serde"] }

[dev-dependencies]
# NixOS doesn't not play nicely with OpenSSL -- it constantly recompiles :(
# Since this is just for testing, it doesn't really matter and we can
# use the Rustls version of things
# https://github.com/sfackler/rust-openssl/issues/1326
# https://github.com/rust-lang/pkg-config-rs/issues/112
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
